parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement_full program
Rule 2     program -> statement_full
Rule 3     statement_full -> statement
Rule 4     statement_full -> statement NEWLINE  [precedence=left, level=3]
Rule 5     statement -> type COLON NAME ASSIGN expression  [precedence=left, level=2]
Rule 6     statement -> type COLON NAME ASSIGN const  [precedence=left, level=2]
Rule 7     statement -> NAME ASSIGN expression  [precedence=left, level=2]
Rule 8     statement -> RETURN
Rule 9     statement -> RETURN expression
Rule 10    statement -> WHILE expression COLON NEWLINE block  [precedence=left, level=3]
Rule 11    statement -> IF expression COLON NEWLINE block NEWLINE  [precedence=left, level=3]
Rule 12    statement -> IF expression COLON NEWLINE block NEWLINE else_statement  [precedence=left, level=3]
Rule 13    statement -> IF expression COLON NEWLINE block NEWLINE elif_statement  [precedence=left, level=3]
Rule 14    statement -> expression
Rule 15    statement -> PASS
Rule 16    statement -> map_statement
Rule 17    statement -> import_statement
Rule 18    statement -> chain_statement
Rule 19    import_statement -> FROM NAME DOT NAME IMPORT module_list
Rule 20    module_list -> NAME
Rule 21    module_list -> NAME COMMA module_list
Rule 22    map_statement -> NAME LSPAR NAME RSPAR ASSIGN kv_mapping  [precedence=left, level=2]
Rule 23    kv_mapping -> LCPAR NEWLINE INDENT key_value_pairs DEDENT NEWLINE RCPAR
Rule 24    kv_mapping -> LCPAR key_value_pairs RCPAR
Rule 25    key_value_pairs -> <empty>
Rule 26    key_value_pairs -> key_value_pair
Rule 27    key_value_pairs -> key_value_pair NEWLINE  [precedence=left, level=3]
Rule 28    key_value_pairs -> key_value_pair COMMA NEWLINE key_value_pairs  [precedence=left, level=3]
Rule 29    key_value_pairs -> key_value_pair COMMA key_value_pairs
Rule 30    key_value_pair -> LPAR exprlist RPAR COLON LPAR exprlist RPAR
Rule 31    chain_statement -> DEF NAME LPAR arglist RPAR COLON NEWLINE block  [precedence=left, level=3]
Rule 32    block -> INDENT block_statements DEDENT
Rule 33    block_statements -> statement_full block_statements
Rule 34    block_statements -> statement_full
Rule 35    else_statement -> ELSE COLON NEWLINE block  [precedence=left, level=3]
Rule 36    elif_statement -> ELIF expression COLON NEWLINE block NEWLINE  [precedence=left, level=3]
Rule 37    elif_statement -> ELIF expression COLON NEWLINE block NEWLINE else_statement  [precedence=left, level=3]
Rule 38    elif_statement -> ELIF expression COLON NEWLINE block NEWLINE elif_statement  [precedence=left, level=3]
Rule 39    expression -> NAME
Rule 40    expression -> const
Rule 41    expression -> LPAR expression RPAR
Rule 42    expression -> NOT expression
Rule 43    expression -> expression OR expression
Rule 44    expression -> expression AND expression
Rule 45    expression -> expression NEQ expression  [precedence=left, level=4]
Rule 46    expression -> expression EQ expression  [precedence=left, level=4]
Rule 47    expression -> expression LT expression  [precedence=left, level=4]
Rule 48    expression -> expression GT expression  [precedence=left, level=4]
Rule 49    expression -> expression LTE expression  [precedence=left, level=4]
Rule 50    expression -> expression GTE expression  [precedence=left, level=4]
Rule 51    expression -> expression MOD expression
Rule 52    expression -> expression DIV expression  [precedence=left, level=6]
Rule 53    expression -> expression MULT expression  [precedence=left, level=6]
Rule 54    expression -> expression MINUS expression  [precedence=left, level=5]
Rule 55    expression -> expression PLUS expression  [precedence=left, level=5]
Rule 56    expression -> NAME DOT NAME LPAR exprlist RPAR
Rule 57    expression -> NAME LPAR exprlist RPAR
Rule 58    arglist -> <empty>
Rule 59    arglist -> argument
Rule 60    arglist -> argument COMMA arglist
Rule 61    argument -> type COLON NAME
Rule 62    exprlist -> <empty>
Rule 63    exprlist -> expression
Rule 64    exprlist -> expression COMMA exprlist
Rule 65    type -> S64
Rule 66    type -> S32
Rule 67    type -> S16
Rule 68    type -> S8
Rule 69    type -> U64
Rule 70    type -> U32
Rule 71    type -> U16
Rule 72    type -> U8
Rule 73    const -> BOOLEAN
Rule 74    const -> STRING
Rule 75    const -> INTEGER
Rule 76    const -> FLOAT
Rule 77    const -> HEX

Unused terminals:

    END
    FOR

Terminals, with rules where they appear:

AND                  : 44
ASSIGN               : 5 6 7 22
BOOLEAN              : 73
COLON                : 5 6 10 11 12 13 30 31 35 36 37 38 61
COMMA                : 21 28 29 60 64
DEDENT               : 23 32
DEF                  : 31
DIV                  : 52
DOT                  : 19 56
ELIF                 : 36 37 38
ELSE                 : 35
END                  : 
EQ                   : 46
FLOAT                : 76
FOR                  : 
FROM                 : 19
GT                   : 48
GTE                  : 50
HEX                  : 77
IF                   : 11 12 13
IMPORT               : 19
INDENT               : 23 32
INTEGER              : 75
LCPAR                : 23 24
LPAR                 : 30 30 31 41 56 57
LSPAR                : 22
LT                   : 47
LTE                  : 49
MINUS                : 54
MOD                  : 51
MULT                 : 53
NAME                 : 5 6 7 19 19 20 21 22 22 31 39 56 56 57 61
NEQ                  : 45
NEWLINE              : 4 10 11 11 12 12 13 13 23 23 27 28 31 35 36 36 37 37 38 38
NOT                  : 42
OR                   : 43
PASS                 : 15
PLUS                 : 55
RCPAR                : 23 24
RETURN               : 8 9
RPAR                 : 30 30 31 41 56 57
RSPAR                : 22
S16                  : 67
S32                  : 66
S64                  : 65
S8                   : 68
STRING               : 74
U16                  : 71
U32                  : 70
U64                  : 69
U8                   : 72
WHILE                : 10
error                : 

Nonterminals, with rules where they appear:

arglist              : 31 60
argument             : 59 60
block                : 10 11 12 13 31 35 36 37 38
block_statements     : 32 33
chain_statement      : 18
const                : 6 40
elif_statement       : 13 38
else_statement       : 12 37
expression           : 5 7 9 10 11 12 13 14 36 37 38 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 63 64
exprlist             : 30 30 56 57 64
import_statement     : 17
key_value_pair       : 26 27 28 29
key_value_pairs      : 23 24 28 29
kv_mapping           : 22
map_statement        : 16
module_list          : 19 21
program              : 1 0
statement            : 3 4
statement_full       : 1 2 33 34
type                 : 5 6 61


state 0

    (0) S' -> . program
    (1) program -> . statement_full program
    (2) program -> . statement_full
    (3) statement_full -> . statement
    (4) statement_full -> . statement NEWLINE
    (5) statement -> . type COLON NAME ASSIGN expression
    (6) statement -> . type COLON NAME ASSIGN const
    (7) statement -> . NAME ASSIGN expression
    (8) statement -> . RETURN
    (9) statement -> . RETURN expression
    (10) statement -> . WHILE expression COLON NEWLINE block
    (11) statement -> . IF expression COLON NEWLINE block NEWLINE
    (12) statement -> . IF expression COLON NEWLINE block NEWLINE else_statement
    (13) statement -> . IF expression COLON NEWLINE block NEWLINE elif_statement
    (14) statement -> . expression
    (15) statement -> . PASS
    (16) statement -> . map_statement
    (17) statement -> . import_statement
    (18) statement -> . chain_statement
    (65) type -> . S64
    (66) type -> . S32
    (67) type -> . S16
    (68) type -> . S8
    (69) type -> . U64
    (70) type -> . U32
    (71) type -> . U16
    (72) type -> . U8
    (39) expression -> . NAME
    (40) expression -> . const
    (41) expression -> . LPAR expression RPAR
    (42) expression -> . NOT expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MULT expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression PLUS expression
    (56) expression -> . NAME DOT NAME LPAR exprlist RPAR
    (57) expression -> . NAME LPAR exprlist RPAR
    (22) map_statement -> . NAME LSPAR NAME RSPAR ASSIGN kv_mapping
    (19) import_statement -> . FROM NAME DOT NAME IMPORT module_list
    (31) chain_statement -> . DEF NAME LPAR arglist RPAR COLON NEWLINE block
    (73) const -> . BOOLEAN
    (74) const -> . STRING
    (75) const -> . INTEGER
    (76) const -> . FLOAT
    (77) const -> . HEX
    NAME            shift and go to state 5
    RETURN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    PASS            shift and go to state 11
    S64             shift and go to state 15
    S32             shift and go to state 16
    S16             shift and go to state 17
    S8              shift and go to state 18
    U64             shift and go to state 19
    U32             shift and go to state 20
    U16             shift and go to state 21
    U8              shift and go to state 22
    LPAR            shift and go to state 23
    NOT             shift and go to state 24
    FROM            shift and go to state 25
    DEF             shift and go to state 26
    BOOLEAN         shift and go to state 27
    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    HEX             shift and go to state 31

    program                        shift and go to state 1
    statement_full                 shift and go to state 2
    statement                      shift and go to state 3
    type                           shift and go to state 4
    expression                     shift and go to state 6
    const                          shift and go to state 7
    map_statement                  shift and go to state 12
    import_statement               shift and go to state 13
    chain_statement                shift and go to state 14

state 1

    (0) S' -> program .


state 2

    (1) program -> statement_full . program
    (2) program -> statement_full .
    (1) program -> . statement_full program
    (2) program -> . statement_full
    (3) statement_full -> . statement
    (4) statement_full -> . statement NEWLINE
    (5) statement -> . type COLON NAME ASSIGN expression
    (6) statement -> . type COLON NAME ASSIGN const
    (7) statement -> . NAME ASSIGN expression
    (8) statement -> . RETURN
    (9) statement -> . RETURN expression
    (10) statement -> . WHILE expression COLON NEWLINE block
    (11) statement -> . IF expression COLON NEWLINE block NEWLINE
    (12) statement -> . IF expression COLON NEWLINE block NEWLINE else_statement
    (13) statement -> . IF expression COLON NEWLINE block NEWLINE elif_statement
    (14) statement -> . expression
    (15) statement -> . PASS
    (16) statement -> . map_statement
    (17) statement -> . import_statement
    (18) statement -> . chain_statement
    (65) type -> . S64
    (66) type -> . S32
    (67) type -> . S16
    (68) type -> . S8
    (69) type -> . U64
    (70) type -> . U32
    (71) type -> . U16
    (72) type -> . U8
    (39) expression -> . NAME
    (40) expression -> . const
    (41) expression -> . LPAR expression RPAR
    (42) expression -> . NOT expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MULT expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression PLUS expression
    (56) expression -> . NAME DOT NAME LPAR exprlist RPAR
    (57) expression -> . NAME LPAR exprlist RPAR
    (22) map_statement -> . NAME LSPAR NAME RSPAR ASSIGN kv_mapping
    (19) import_statement -> . FROM NAME DOT NAME IMPORT module_list
    (31) chain_statement -> . DEF NAME LPAR arglist RPAR COLON NEWLINE block
    (73) const -> . BOOLEAN
    (74) const -> . STRING
    (75) const -> . INTEGER
    (76) const -> . FLOAT
    (77) const -> . HEX
    $end            reduce using rule 2 (program -> statement_full .)
    NAME            shift and go to state 5
    RETURN          shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    PASS            shift and go to state 11
    S64             shift and go to state 15
    S32             shift and go to state 16
    S16             shift and go to state 17
    S8              shift and go to state 18
    U64             shift and go to state 19
    U32             shift and go to state 20
    U16             shift and go to state 21
    U8              shift and go to state 22
    LPAR            shift and go to state 23
    NOT             shift and go to state 24
    FROM            shift and go to state 25
    DEF             shift and go to state 26
    BOOLEAN         shift and go to state 27
    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    HEX             shift and go to state 31

    statement_full                 shift and go to state 2
    program                        shift and go to state 32
    statement                      shift and go to state 3
    type                           shift and go to state 4
    expression                     shift and go to state 6
    const                          shift and go to state 7
    map_statement                  shift and go to state 12
    import_statement               shift and go to state 13
    chain_statement                shift and go to state 14

state 3

    (3) statement_full -> statement .
    (4) statement_full -> statement . NEWLINE
    NAME            reduce using rule 3 (statement_full -> statement .)
    RETURN          reduce using rule 3 (statement_full -> statement .)
    WHILE           reduce using rule 3 (statement_full -> statement .)
    IF              reduce using rule 3 (statement_full -> statement .)
    PASS            reduce using rule 3 (statement_full -> statement .)
    S64             reduce using rule 3 (statement_full -> statement .)
    S32             reduce using rule 3 (statement_full -> statement .)
    S16             reduce using rule 3 (statement_full -> statement .)
    S8              reduce using rule 3 (statement_full -> statement .)
    U64             reduce using rule 3 (statement_full -> statement .)
    U32             reduce using rule 3 (statement_full -> statement .)
    U16             reduce using rule 3 (statement_full -> statement .)
    U8              reduce using rule 3 (statement_full -> statement .)
    LPAR            reduce using rule 3 (statement_full -> statement .)
    NOT             reduce using rule 3 (statement_full -> statement .)
    FROM            reduce using rule 3 (statement_full -> statement .)
    DEF             reduce using rule 3 (statement_full -> statement .)
    BOOLEAN         reduce using rule 3 (statement_full -> statement .)
    STRING          reduce using rule 3 (statement_full -> statement .)
    INTEGER         reduce using rule 3 (statement_full -> statement .)
    FLOAT           reduce using rule 3 (statement_full -> statement .)
    HEX             reduce using rule 3 (statement_full -> statement .)
    $end            reduce using rule 3 (statement_full -> statement .)
    DEDENT          reduce using rule 3 (statement_full -> statement .)
    NEWLINE         shift and go to state 33


state 4

    (5) statement -> type . COLON NAME ASSIGN expression
    (6) statement -> type . COLON NAME ASSIGN const
    COLON           shift and go to state 34


state 5

    (7) statement -> NAME . ASSIGN expression
    (39) expression -> NAME .
    (56) expression -> NAME . DOT NAME LPAR exprlist RPAR
    (57) expression -> NAME . LPAR exprlist RPAR
    (22) map_statement -> NAME . LSPAR NAME RSPAR ASSIGN kv_mapping
  ! shift/reduce conflict for LPAR resolved as shift
    ASSIGN          shift and go to state 35
    OR              reduce using rule 39 (expression -> NAME .)
    AND             reduce using rule 39 (expression -> NAME .)
    NEQ             reduce using rule 39 (expression -> NAME .)
    EQ              reduce using rule 39 (expression -> NAME .)
    LT              reduce using rule 39 (expression -> NAME .)
    GT              reduce using rule 39 (expression -> NAME .)
    LTE             reduce using rule 39 (expression -> NAME .)
    GTE             reduce using rule 39 (expression -> NAME .)
    MOD             reduce using rule 39 (expression -> NAME .)
    DIV             reduce using rule 39 (expression -> NAME .)
    MULT            reduce using rule 39 (expression -> NAME .)
    MINUS           reduce using rule 39 (expression -> NAME .)
    PLUS            reduce using rule 39 (expression -> NAME .)
    NEWLINE         reduce using rule 39 (expression -> NAME .)
    NAME            reduce using rule 39 (expression -> NAME .)
    RETURN          reduce using rule 39 (expression -> NAME .)
    WHILE           reduce using rule 39 (expression -> NAME .)
    IF              reduce using rule 39 (expression -> NAME .)
    PASS            reduce using rule 39 (expression -> NAME .)
    S64             reduce using rule 39 (expression -> NAME .)
    S32             reduce using rule 39 (expression -> NAME .)
    S16             reduce using rule 39 (expression -> NAME .)
    S8              reduce using rule 39 (expression -> NAME .)
    U64             reduce using rule 39 (expression -> NAME .)
    U32             reduce using rule 39 (expression -> NAME .)
    U16             reduce using rule 39 (expression -> NAME .)
    U8              reduce using rule 39 (expression -> NAME .)
    NOT             reduce using rule 39 (expression -> NAME .)
    FROM            reduce using rule 39 (expression -> NAME .)
    DEF             reduce using rule 39 (expression -> NAME .)
    BOOLEAN         reduce using rule 39 (expression -> NAME .)
    STRING          reduce using rule 39 (expression -> NAME .)
    INTEGER         reduce using rule 39 (expression -> NAME .)
    FLOAT           reduce using rule 39 (expression -> NAME .)
    HEX             reduce using rule 39 (expression -> NAME .)
    $end            reduce using rule 39 (expression -> NAME .)
    DEDENT          reduce using rule 39 (expression -> NAME .)
    DOT             shift and go to state 36
    LPAR            shift and go to state 37
    LSPAR           shift and go to state 38


state 6

    (14) statement -> expression .
    (43) expression -> expression . OR expression
    (44) expression -> expression . AND expression
    (45) expression -> expression . NEQ expression
    (46) expression -> expression . EQ expression
    (47) expression -> expression . LT expression
    (48) expression -> expression . GT expression
    (49) expression -> expression . LTE expression
    (50) expression -> expression . GTE expression
    (51) expression -> expression . MOD expression
    (52) expression -> expression . DIV expression
    (53) expression -> expression . MULT expression
    (54) expression -> expression . MINUS expression
    (55) expression -> expression . PLUS expression
    NEWLINE         reduce using rule 14 (statement -> expression .)
    NAME            reduce using rule 14 (statement -> expression .)
    RETURN          reduce using rule 14 (statement -> expression .)
    WHILE           reduce using rule 14 (statement -> expression .)
    IF              reduce using rule 14 (statement -> expression .)
    PASS            reduce using rule 14 (statement -> expression .)
    S64             reduce using rule 14 (statement -> expression .)
    S32             reduce using rule 14 (statement -> expression .)
    S16             reduce using rule 14 (statement -> expression .)
    S8              reduce using rule 14 (statement -> expression .)
    U64             reduce using rule 14 (statement -> expression .)
    U32             reduce using rule 14 (statement -> expression .)
    U16             reduce using rule 14 (statement -> expression .)
    U8              reduce using rule 14 (statement -> expression .)
    LPAR            reduce using rule 14 (statement -> expression .)
    NOT             reduce using rule 14 (statement -> expression .)
    FROM            reduce using rule 14 (statement -> expression .)
    DEF             reduce using rule 14 (statement -> expression .)
    BOOLEAN         reduce using rule 14 (statement -> expression .)
    STRING          reduce using rule 14 (statement -> expression .)
    INTEGER         reduce using rule 14 (statement -> expression .)
    FLOAT           reduce using rule 14 (statement -> expression .)
    HEX             reduce using rule 14 (statement -> expression .)
    $end            reduce using rule 14 (statement -> expression .)
    DEDENT          reduce using rule 14 (statement -> expression .)
    OR              shift and go to state 39
    AND             shift and go to state 40
    NEQ             shift and go to state 41
    EQ              shift and go to state 42
    LT              shift and go to state 43
    GT              shift and go to state 44
    LTE             shift and go to state 45
    GTE             shift and go to state 46
    MOD             shift and go to state 47
    DIV             shift and go to state 48
    MULT            shift and go to state 49
    MINUS           shift and go to state 50
    PLUS            shift and go to state 51


state 7

    (40) expression -> const .
    OR              reduce using rule 40 (expression -> const .)
    AND             reduce using rule 40 (expression -> const .)
    NEQ             reduce using rule 40 (expression -> const .)
    EQ              reduce using rule 40 (expression -> const .)
    LT              reduce using rule 40 (expression -> const .)
    GT              reduce using rule 40 (expression -> const .)
    LTE             reduce using rule 40 (expression -> const .)
    GTE             reduce using rule 40 (expression -> const .)
    MOD             reduce using rule 40 (expression -> const .)
    DIV             reduce using rule 40 (expression -> const .)
    MULT            reduce using rule 40 (expression -> const .)
    MINUS           reduce using rule 40 (expression -> const .)
    PLUS            reduce using rule 40 (expression -> const .)
    NEWLINE         reduce using rule 40 (expression -> const .)
    NAME            reduce using rule 40 (expression -> const .)
    RETURN          reduce using rule 40 (expression -> const .)
    WHILE           reduce using rule 40 (expression -> const .)
    IF              reduce using rule 40 (expression -> const .)
    PASS            reduce using rule 40 (expression -> const .)
    S64             reduce using rule 40 (expression -> const .)
    S32             reduce using rule 40 (expression -> const .)
    S16             reduce using rule 40 (expression -> const .)
    S8              reduce using rule 40 (expression -> const .)
    U64             reduce using rule 40 (expression -> const .)
    U32             reduce using rule 40 (expression -> const .)
    U16             reduce using rule 40 (expression -> const .)
    U8              reduce using rule 40 (expression -> const .)
    LPAR            reduce using rule 40 (expression -> const .)
    NOT             reduce using rule 40 (expression -> const .)
    FROM            reduce using rule 40 (expression -> const .)
    DEF             reduce using rule 40 (expression -> const .)
    BOOLEAN         reduce using rule 40 (expression -> const .)
    STRING          reduce using rule 40 (expression -> const .)
    INTEGER         reduce using rule 40 (expression -> const .)
    FLOAT           reduce using rule 40 (expression -> const .)
    HEX             reduce using rule 40 (expression -> const .)
    $end            reduce using rule 40 (expression -> const .)
    DEDENT          reduce using rule 40 (expression -> const .)
    COLON           reduce using rule 40 (expression -> const .)
    RPAR            reduce using rule 40 (expression -> const .)
    COMMA           reduce using rule 40 (expression -> const .)


state 8

    (8) statement -> RETURN .
    (9) statement -> RETURN . expression
    (39) expression -> . NAME
    (40) expression -> . const
    (41) expression -> . LPAR expression RPAR
    (42) expression -> . NOT expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MULT expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression PLUS expression
    (56) expression -> . NAME DOT NAME LPAR exprlist RPAR
    (57) expression -> . NAME LPAR exprlist RPAR
    (73) const -> . BOOLEAN
    (74) const -> . STRING
    (75) const -> . INTEGER
    (76) const -> . FLOAT
    (77) const -> . HEX
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for LPAR resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for HEX resolved as shift
    NEWLINE         reduce using rule 8 (statement -> RETURN .)
    RETURN          reduce using rule 8 (statement -> RETURN .)
    WHILE           reduce using rule 8 (statement -> RETURN .)
    IF              reduce using rule 8 (statement -> RETURN .)
    PASS            reduce using rule 8 (statement -> RETURN .)
    S64             reduce using rule 8 (statement -> RETURN .)
    S32             reduce using rule 8 (statement -> RETURN .)
    S16             reduce using rule 8 (statement -> RETURN .)
    S8              reduce using rule 8 (statement -> RETURN .)
    U64             reduce using rule 8 (statement -> RETURN .)
    U32             reduce using rule 8 (statement -> RETURN .)
    U16             reduce using rule 8 (statement -> RETURN .)
    U8              reduce using rule 8 (statement -> RETURN .)
    FROM            reduce using rule 8 (statement -> RETURN .)
    DEF             reduce using rule 8 (statement -> RETURN .)
    $end            reduce using rule 8 (statement -> RETURN .)
    DEDENT          reduce using rule 8 (statement -> RETURN .)
    NAME            shift and go to state 53
    LPAR            shift and go to state 23
    NOT             shift and go to state 24
    BOOLEAN         shift and go to state 27
    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    HEX             shift and go to state 31

    expression                     shift and go to state 52
    const                          shift and go to state 7

state 9

    (10) statement -> WHILE . expression COLON NEWLINE block
    (39) expression -> . NAME
    (40) expression -> . const
    (41) expression -> . LPAR expression RPAR
    (42) expression -> . NOT expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MULT expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression PLUS expression
    (56) expression -> . NAME DOT NAME LPAR exprlist RPAR
    (57) expression -> . NAME LPAR exprlist RPAR
    (73) const -> . BOOLEAN
    (74) const -> . STRING
    (75) const -> . INTEGER
    (76) const -> . FLOAT
    (77) const -> . HEX
    NAME            shift and go to state 53
    LPAR            shift and go to state 23
    NOT             shift and go to state 24
    BOOLEAN         shift and go to state 27
    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    HEX             shift and go to state 31

    expression                     shift and go to state 54
    const                          shift and go to state 7

state 10

    (11) statement -> IF . expression COLON NEWLINE block NEWLINE
    (12) statement -> IF . expression COLON NEWLINE block NEWLINE else_statement
    (13) statement -> IF . expression COLON NEWLINE block NEWLINE elif_statement
    (39) expression -> . NAME
    (40) expression -> . const
    (41) expression -> . LPAR expression RPAR
    (42) expression -> . NOT expression
    (43) expression -> . expression OR expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression NEQ expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression MOD expression
    (52) expression -> . expression DIV expression
    (53) expression -> . expression MULT expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression PLUS expression
    (56) expression -> . NAME DOT NAME LPAR exprlist RPAR
    (57) expression -> . NAME LPAR exprlist RPAR
    (73) const -> . BOOLEAN
    (74) const -> . STRING
    (75) const -> . INTEGER
    (76) const -> . FLOAT
    (77) const -> . HEX
    NAME            shift and go to state 53
    LPAR            shift and go to state 23
    NOT             shift and go to state 24
    BOOLEAN         shift and go to state 27
    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    HEX             shift and go to state 31

    expression                     shift and go to state 55
    const                          shift and go to state 7

state 11

    (15) statement -> PASS .
    NEWLINE         reduce using rule 15 (statement -> PASS .)
    NAME            reduce using rule 15 (statement -> PASS .)
    RETURN          reduce using rule 15 (statement -> PASS .)
    WHILE           reduce using rule 15 (statement -> PASS .)
    IF              reduce using rule 15 (statement -> PASS .)
    PASS            reduce using rule 15 (statement -> PASS .)
    S64             reduce using rule 15 (statement -> PASS .)
    S32             reduce using rule 15 (statement -> PASS .)
    S16             reduce using rule 15 (statement -> PASS .)
    S8              reduce using rule 15 (statement -> PASS .)
    U64             reduce using rule 15 (statement -> PASS .)
    U32             reduce using rule 15 (statement -> PASS .)
    U16             reduce using rule 15 (statement -> PASS .)
    U8              reduce using rule 15 (statement -> PASS .)
    LPAR            reduce using rule 15 (statement -> PASS .)
    NOT             reduce using rule 15 (statement -> PASS .)
    FROM            reduce using rule 15 (statement -> PASS .)
    DEF             reduce using rule 15 (statement -> PASS .)
    BOOLEAN         reduce using rule 15 (statement -> PASS .)
    STRING          reduce using rule 15 (statement -> PASS .)
    INTEGER         reduce using rule 15 (statement -> PASS .)
    FLOAT           reduce using rule 15 (statement -> PASS .)
    HEX             reduce using rule 15 (statement -> PASS .)
    $end            reduce using rule 15 (statement -> PASS .)
    DEDENT          reduce using rule 15 (statement -> PASS .)


state 12

    (16) statement -> map_statement .
    NEWLINE         reduce using rule 16 (statement -> map_statement .)
    NAME            reduce using rule 16 (statement -> map_statement .)
    RETURN          reduce using rule 16 (statement -> map_statement .)
    WHILE           reduce using rule 16 (statement -> map_statement .)
    IF              reduce using rule 16 (statement -> map_statement .)
    PASS            reduce using rule 16 (statement -> map_statement .)
    S64             reduce using rule 16 (statement -> map_statement .)
    S32             reduce using rule 16 (statement -> map_statement .)
    S16             reduce using rule 16 (statement -> map_statement .)
    S8              reduce using rule 16 (statement -> map_statement .)
    U64             reduce using rule 16 (statement -> map_statement .)
    U32             reduce using rule 16 (statement -> map_statement .)
    U16             reduce using rule 16 (statement -> map_statement .)
    U8              reduce using rule 16 (statement -> map_statement .)
    LPAR            reduce using rule 16 (statement -> map_statement .)
    NOT             reduce using rule 16 (statement -> map_statement .)
    FROM            reduce using rule 16 (statement -> map_statement .)
    DEF             reduce using rule 16 (statement -> map_statement .)
    BOOLEAN         reduce using rule 16 (statement -> map_statement .)
    STRING          reduce using rule 16 (statement -> map_statement .)
    INTEGER         reduce using rule 16 (statement -> map_statement .)
    FLOAT           reduce using rule 16 (statement -> map_statement .)
    HEX             reduce using rule 16 (statement -> map_statement .)
    $end            reduce using rule 16 (statement -> map_statement .)
    DEDENT          reduce using rule 16 (statement -> map_statement .)


state 13

    (17) statement -> import_statement .
    NEWLINE         reduce using rule 17 (statement -> import_statement .)
    NAME            reduce using rule 17 (statement -> import_statement .)
    RETURN          reduce using rule 17 (statement -> import_statement .)
    WHILE           reduce using rule 17 (statement -> import_statement .)
    IF              reduce using rule 17 (statement -> import_statement .)
    PASS            reduce using rule 17 (statement -> import_statement .)
    S64             reduce using rule 17 (statement -> import_statement .)
    S32             reduce using rule 17 (statement -> import_statement .)
    S16             reduce using rule 17 (statement -> import_statement .)
    S8              reduce using rule 17 (statement -> import_statement .)
    U64             reduce using rule 17 (statement -> import_statement .)
    U32             reduce using rule 17 (statement -> import_statement .)
    U16             reduce using rule 17 (statement -> import_statement .)
    U8              reduce using rule 17 (statement -> import_statement .)
    LPAR            reduce using rule 17 (statement -> import_statement .)
    NOT             reduce using rule 17 (statement -> import_statement .)
    FROM            reduce using rule 17 (statement -> import_statement .)
    DEF             reduce using rule 17 (statement -> import_statement .)
    BOOLEAN         reduce using rule 17 (statement -> import_statement .)
    STRING          reduce using rule 17 (statement -> import_statement .)
    INTEGER         reduce using rule 17 (statement -> import_statement .)
    FLOAT           reduce using rule 17 (statement -> import_statement .)
    HEX             reduce using rule 17 (statement -> import_statement .)
    $end            reduce using rule 17 (statement -> import_statement .)
    DEDENT          reduce using rule 17 (statement -> import_statement .)


state 14
